--- a/projects/hashtag_treinamentos/ProjetoDjango/filme/templates/homefilmes.html
+++ b/projects/hashtag_treinamentos/ProjetoDjango/filme/templates/homefilmes.html
@@ -10,7 +10,9 @@ HomeFilmes HashFlix
     <h1>Esta é a nossa HomeFilmes</h1>
     {% for filme in object_list %}
     <hr>
-    <p>{{ filme }}</p>
+    <a href="{% url 'filme:detalhesfilme' filme.id %}">
+        <p>{{ filme }}</p>
+    </a>
     <p>{{filme.descricao}}</p>
     <img src="{{filme.thumb.url}}">
     {% endfor %}
