--- a/projects/hashtag_treinamentos/ProjetoDjango/templates/navbar.html
+++ b/projects/hashtag_treinamentos/ProjetoDjango/templates/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 <nav class="w-full flex justify-between items-center py-3 px-4 fixed z-50">
     <div class="w-6/12">
-        <a href="#">
+        <a href="/">
             <img class="w-2/12" src="{% static 'images/hashflix.png' %}">
         </a>
     </div>
