--- a/projects/hashtag_treinamentos/ProjetoDjango/filme/templates/detalhesfilme.html
+++ b/projects/hashtag_treinamentos/ProjetoDjango/filme/templates/detalhesfilme.html
@@ -11,6 +11,25 @@ HomeFilmes HashFlix
     <p>{{ object }}</p>
     <p>{{ object.descricao  }}</p>
     <img src="{{object.thumb.url}}">
+
+    <h2>Episódios</h2>
+    {% for episodio in object.episodios.all %}
+    <a href="{{episodio.video}}">
+        <p>Episódio {{ forloop.counter }} : {{episodio.titulo}} </p>
+    </a>
+    {% endfor %}
+</div>
+
+<div class="py-16">
+    <h2>Filmes Relacionados</h2>
+    {% for filme in filmes_relacionados %}
+    <p>
+        <a href="{% url 'filme:detalhesfilme' filme.id %}">
+            {{filme.titulo}}
+        </a>
+    </p>
+
+    {% endfor %}
 </div>
 
 {% endblock %}
