--- a/projects/hashtag_treinamentos/ProjetoDjango/filme/templates/homefilmes.html
+++ b/projects/hashtag_treinamentos/ProjetoDjango/filme/templates/homefilmes.html
@@ -1,21 +1,194 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} 
+{% load static %} 
+
+{% block titulo %} 
+HomeFilmesHashFlix 
+{% endblock %} 
 
 
-{% block titulo %}
-HomeFilmes HashFlix
+{% block head %}
+<style>
+  :root {
+    --itemGrow: 1.2;
+    --duration: 250ms;
+  }
+
+  html {
+    scroll-behavior: smooth;
+  }
+
+  body {
+    margin: 0;
+    background-color: #000;
+  }
+
+  h1 {
+    font-family: Arial;
+    color: red;
+    text-align: center;
+  }
+
+  .wrapper {
+    display: grid;
+    grid-template-columns: repeat(3, 100%);
+    overflow: hidden;
+    scroll-behavior: smooth;
+  }
+
+  .wrapper section {
+    width: 100%;
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(5, auto);
+    margin: 20px 0;
+  }
+
+  .wrapper section .item {
+    padding: 0 2px;
+    transition: var(--duration) all;
+  }
+
+  .wrapper section .item:hover {
+    margin: 0 40px;
+    transform: scale(var(--itemGrow));
+  }
+
+  .wrapper section a {
+    position: absolute;
+    color: #fff;
+    text-decoration: none;
+    font-size: 6em;
+    background: rgb(0, 0, 0);
+    width: 80px;
+    padding: 20px;
+    text-align: center;
+    z-index: 1;
+  }
+
+  .wrapper section a:nth-of-type(1) {
+    top: 0;
+    bottom: 0;
+    left: 0;
+    background: linear-gradient(-90deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 100%);
+  }
+
+  .wrapper section a:nth-of-type(2) {
+    top: 0;
+    bottom: 0;
+    right: 0;
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 100%);
+  }
+
+  /* Remove the arrow for Mobile */
+  @media only screen and (max-width: 600px) {
+    .wrapper section a.arrow__btn {
+      display: none;
+    }
+  }
+</style>
 {% endblock %}
 
 {% block content %}
-<div class="py-16">
-    <h1>Esta é a nossa HomeFilmes</h1>
-    {% for filme in object_list %}
-    <hr>
-    <a href="{% url 'filme:detalhesfilme' filme.id %}">
-        <p>{{ filme }}</p>
-    </a>
-    <p>{{filme.descricao}}</p>
-    <img src="{{filme.thumb.url}}">
-    {% endfor %}
-</div>
+
+<main class="bg-primary_black min-h-screen w-full">
+    <section
+        class="h-screen relative bg-no-repeat pb-8 pl-6 flex items-end bg-cover"
+        style="background-image: url('{% static 'images/python.png' %}')">
+        <div>
+            <h2 class="text-6xl font-semibold text-white my-4">Titulo</h2>
+            <p class="w-11/12 md:w-5/12 font-medium text-white my-4">
+                Descrição
+            </p>
+            <div class="flex my-4">
+                <a href="#">
+                    <button class="flex items-center bg-white py-2 px-5 rounded-md" style="color: black">
+                        <ion-icon name="play" class="text-2xl"></ion-icon>
+                        <span class="ml-3 font-medium"> Play </span>
+                    </button>
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <section class="bg-primary_black flex justify-center py-10">
+        <div class="p-8 w-10/12 relative">
+            <h2 class="text-gray-200 text-2xl font-medium">
+                Novo
+            </h2>
+
+            <div class="wrapper">
+                <section id="section1" class="flex flex-nowrap items-center justify-center space-x-8">
+                    <a href="#section2" class="arrow__btn text-6xl page"></a>
+                    {% for filme in lista_filmes_recentes %} 
+                    {% if forloop.counter < 5 %}
+                    <div class="item h-64 w-1/4 m-4">
+                        <a href="{% url 'filme:detalhesfilme' filme.pk %}">
+                            <img src="{{ filme.thumb.url }}" class="rounded-md w-full h-full object-cover"/>
+                        </a>
+                    </div>
+                    {% endif %} 
+                    {% endfor %}
+                    <a href="#section2" class="arrow__btn text-6xl"></a>
+                </section>
+                {% if lista_filmes_recentes|length > 4 %}
+                <section
+                    id="section2"
+                    class="flex flex-nowrap items-center justify-center">
+                    <a href="#section1" class="arrow__btn text-6xl"> </a>
+                    {% for filme in lista_filmes_recentes %} 
+                    {% if forloop.counter > 4 %}
+                    <div class="item h-64 w-1/4 m-4">
+                        <a href="{% url 'filme:detalhesfilme' filme.pk %}">
+                            <img src="{{ filme.thumb.url }}" class="rounded-md w-full h-full object-cover"/>
+                        </a>
+                    </div>
+                    {% endif %} 
+                    {% endfor %}
+                    <a href="#section1" class="arrow__btn text-6xl"></a>
+                </section>
+                {% endif %}
+            </div>
+        </div>
+    </section>
+
+    <section class="bg-primary_black flex justify-center py-10">
+        <div class="p-8 w-10/12 relative">
+            <h2 class="text-gray-200 text-2xl font-medium">
+                Em alta
+            </h2>
+
+            <div class="wrapper">
+                <section id="section1emalta" class="flex flex-nowrap items-center justify-center space-x-8">
+                    <a href="#section2emalta" class="arrow__btn text-6xl page"></a>
+                    {% for filme in lista_filmes_emalta %} 
+                    {% if forloop.counter < 5 %}
+                    <div class="item h-64 w-1/4 m-4">
+                        <a href="{% url 'filme:detalhesfilme' filme.pk %}">
+                            <img src="{{ filme.thumb.url }}" class="rounded-md w-full h-full object-cover"/>
+                        </a>
+                    </div>
+                    {% endif %} 
+                    {% endfor %}
+                    <a href="#section2emalta" class="arrow__btn text-6xl"></a>
+                </section>
+                {% if lista_filmes_emalta|length > 4 %}
+                <section id="section2emalta" class="flex flex-nowrap items-center justify-center">
+                    <a href="#section1emalta" class="arrow__btn text-6xl"> </a>
+                    {% for filme in lista_filmes_emalta %} 
+                    {% if forloop.counter > 4 %}
+                    <div class="item h-64 w-1/4 m-4">
+                        <a href="{% url 'filme:detalhesfilme' filme.pk %}">
+                            <img src="{{ filme.thumb.url }}" class="rounded-md w-full h-full object-cover"/>
+                        </a>
+                    </div>
+                    {% endif %} 
+                    {% endfor %}
+                    <a href="#section1emalta" class="arrow__btn text-6xl"></a>
+                </section>
+                {% endif %}
+            </div>
+        </div>
+    </section>
+</main>
 
 {% endblock %}
