--- a/projects/hashtag_treinamentos/ProjetoDjango/filme/templates/homefilmes.html
+++ b/projects/hashtag_treinamentos/ProjetoDjango/filme/templates/homefilmes.html
@@ -6,101 +6,21 @@ HomeFilmesHashFlix
 {% endblock %} 
 
 
-{% block head %}
-<style>
-  :root {
-    --itemGrow: 1.2;
-    --duration: 250ms;
-  }
-
-  html {
-    scroll-behavior: smooth;
-  }
-
-  body {
-    margin: 0;
-    background-color: #000;
-  }
-
-  h1 {
-    font-family: Arial;
-    color: red;
-    text-align: center;
-  }
-
-  .wrapper {
-    display: grid;
-    grid-template-columns: repeat(3, 100%);
-    overflow: hidden;
-    scroll-behavior: smooth;
-  }
-
-  .wrapper section {
-    width: 100%;
-    position: relative;
-    display: grid;
-    grid-template-columns: repeat(5, auto);
-    margin: 20px 0;
-  }
-
-  .wrapper section .item {
-    padding: 0 2px;
-    transition: var(--duration) all;
-  }
-
-  .wrapper section .item:hover {
-    margin: 0 40px;
-    transform: scale(var(--itemGrow));
-  }
-
-  .wrapper section a {
-    position: absolute;
-    color: #fff;
-    text-decoration: none;
-    font-size: 6em;
-    background: rgb(0, 0, 0);
-    width: 80px;
-    padding: 20px;
-    text-align: center;
-    z-index: 1;
-  }
-
-  .wrapper section a:nth-of-type(1) {
-    top: 0;
-    bottom: 0;
-    left: 0;
-    background: linear-gradient(-90deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 100%);
-  }
-
-  .wrapper section a:nth-of-type(2) {
-    top: 0;
-    bottom: 0;
-    right: 0;
-    background: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 100%);
-  }
-
-  /* Remove the arrow for Mobile */
-  @media only screen and (max-width: 600px) {
-    .wrapper section a.arrow__btn {
-      display: none;
-    }
-  }
-</style>
-{% endblock %}
-
 {% block content %}
 
 <main class="bg-primary_black min-h-screen w-full">
     <section
         class="h-screen relative bg-no-repeat pb-8 pl-6 flex items-end bg-cover"
-        style="background-image: url('{% static 'images/python.png' %}')">
+        style="background-image: url('{{ filme_destaque.thumb.url }}')">
         <div>
-            <h2 class="text-6xl font-semibold text-white my-4">Titulo</h2>
+            <h2 class="text-6xl font-semibold text-white my-4">
+              {{ filme_destaque.titulo }}
+            </h2>
             <p class="w-11/12 md:w-5/12 font-medium text-white my-4">
-                Descrição
+                {{ filme_destaque.descricao}}
             </p>
             <div class="flex my-4">
-                <a href="#">
+                <a href="{% url 'filme:detalhesfilme' filme_destaque.pk %}">
                     <button class="flex items-center bg-white py-2 px-5 rounded-md" style="color: black">
                         <ion-icon name="play" class="text-2xl"></ion-icon>
                         <span class="ml-3 font-medium"> Play </span>
@@ -119,7 +39,7 @@ HomeFilmesHashFlix
             <div class="wrapper">
                 <section id="section1" class="flex flex-nowrap items-center justify-center space-x-8">
                     <a href="#section2" class="arrow__btn text-6xl page"></a>
-                    {% for filme in lista_filmes_recentes %} 
+                  {% for filme in lista_filmes_recentes %} 
                     {% if forloop.counter < 5 %}
                     <div class="item h-64 w-1/4 m-4">
                         <a href="{% url 'filme:detalhesfilme' filme.pk %}">
@@ -127,15 +47,13 @@ HomeFilmesHashFlix
                         </a>
                     </div>
                     {% endif %} 
-                    {% endfor %}
+                  {% endfor %}
                     <a href="#section2" class="arrow__btn text-6xl"></a>
                 </section>
-                {% if lista_filmes_recentes|length > 4 %}
-                <section
-                    id="section2"
-                    class="flex flex-nowrap items-center justify-center">
+              {% if lista_filmes_recentes|length > 4 %}
+                <section id="section2" class="flex flex-nowrap items-center justify-center">
                     <a href="#section1" class="arrow__btn text-6xl"> </a>
-                    {% for filme in lista_filmes_recentes %} 
+                  {% for filme in lista_filmes_recentes %} 
                     {% if forloop.counter > 4 %}
                     <div class="item h-64 w-1/4 m-4">
                         <a href="{% url 'filme:detalhesfilme' filme.pk %}">
@@ -143,10 +61,10 @@ HomeFilmesHashFlix
                         </a>
                     </div>
                     {% endif %} 
-                    {% endfor %}
+                  {% endfor %}
                     <a href="#section1" class="arrow__btn text-6xl"></a>
                 </section>
-                {% endif %}
+              {% endif %}
             </div>
         </div>
     </section>
@@ -189,6 +107,48 @@ HomeFilmesHashFlix
             </div>
         </div>
     </section>
+
+
+    <section class="bg-primary_black flex justify-center py-10">
+        <div class="p-8 w-10/12 relative">
+            <h2 class="text-gray-200 text-2xl font-medium">
+                Assistir Novamente
+            </h2>
+
+            <div class="wrapper">
+                <section id="section1vistos" class="flex flex-nowrap items-center justify-center space-x-8">
+                    <a href="#section2vistos" class="arrow__btn text-6xl page"></a>
+                    {% for filme in request.user.filmes_vistos.all %} 
+                    {% if forloop.counter < 5 %}
+                    <div class="item h-64 w-1/4 m-4">
+                        <a href="{% url 'filme:detalhesfilme' filme.pk %}">
+                            <img src="{{ filme.thumb.url }}" class="rounded-md w-full h-full object-cover"/>
+                        </a>
+                    </div>
+                    {% endif %} 
+                    {% endfor %}
+                    <a href="#section2vistos" class="arrow__btn text-6xl"></a>
+                </section>
+                {% if request.user.filmes_vistos.all|length > 4 %}
+                <section id="section2vistos" class="flex flex-nowrap items-center justify-center">
+                    <a href="#section1vistos" class="arrow__btn text-6xl"> </a>
+                    {% for filme in request.user.filmes_vistos.all %} 
+                    {% if forloop.counter > 4 %}
+                    <div class="item h-64 w-1/4 m-4">
+                        <a href="{% url 'filme:detalhesfilme' filme.pk %}">
+                            <img src="{{ filme.thumb.url }}" class="rounded-md w-full h-full object-cover"/>
+                        </a>
+                    </div>
+                    {% endif %} 
+                    {% endfor %}
+                    <a href="#section1vistos" class="arrow__btn text-6xl"></a>
+                </section>
+                {% endif %}
+            </div>
+        </div>
+    </section>
+
+
 </main>
 
 {% endblock %}
