--- a/projects/hashtag_treinamentos/ProjetoDjango/templates/navbar.html
+++ b/projects/hashtag_treinamentos/ProjetoDjango/templates/navbar.html
@@ -33,7 +33,7 @@
 
         <div class="mr-2">
             {% if user.is_authenticated %}
-            <a href="{% url 'filme:editarperfil' %}">
+            <a href="{% url 'filme:editarperfil' user.pk %}">
                 <button class="bg-red-600 text-white py-1 px-3 rounded-md">
                     Editar Peril
                 </button>
