--- a/projects/Projeto_Django_Saude/medico/templates/abrir_horario.html
+++ b/projects/Projeto_Django_Saude/medico/templates/abrir_horario.html
@@ -8,6 +8,10 @@
 {% endblock 'head' %}
 
 {% block 'body' %}
+
+{% include "partials/navbar.html "%}
+
+
     <div class="container">
         <br>
         <br>
