--- a/projects/Projeto_Django_Saude/paciente/templates/minhas_consultas.html
+++ b/projects/Projeto_Django_Saude/paciente/templates/minhas_consultas.html
@@ -13,6 +13,8 @@
 
 {% block 'body' %}
 
+{% include "partials/navbar.html "%}
+
     <div class="container">
         <br>
         <h2><span class="color-dark">Suas consultas</span></h2>
@@ -45,7 +47,7 @@
                 <tbody>
                     {% for consulta in minhas_consultas  %}
                         <tr>
-                            <td><a href="">Dr(a). {{ consulta }}</a></td>
+                            <td><a href="{% url 'consulta' consulta.id %}">Dr(a). {{ consulta.data_aberta.User }}</a></td>
                             <td>{{consulta.get_status_display}}</td>
                             <td>{{consulta.data_aberta.data}}</td>
                         </tr>
