--- a/projects/Projeto_Django_Saude/paciente/templates/home.html
+++ b/projects/Projeto_Django_Saude/paciente/templates/home.html
@@ -46,10 +46,11 @@
                     <div class="row">
                         <div class="col-md-3"><img src="{{medico.foto.url}}" class="foto-perfil-card" alt=""></div>
                         <div class="col-md">
-                            <p style="font-size: 20px" class="p-bold">Dr(a). {{ medico.nome }}<i class="bi bi-patch-check-fill icon-main"></i></p>
+                            <p style="font-size: 20px" class="p-bold">Dr(a). {{ medico.nome }}&nbsp;<i class="bi bi-patch-check-fill icon-main"></i></p>
                             <p>{{ medico.descricao }}</p>
                         </div>
                     </div>  
+                    <br>
                     <p><i class="bi bi-map icon-main"></i>&nbsp&nbsp {{ medico.rua }}.</p>
                     <p><i class="bi bi-calendar2-week icon-main"></i>&nbsp&nbspProxima data: 
                         {% if medico.proxima_data %}
@@ -73,9 +74,6 @@
             <p class="bg-main-lembrete">
                 <span class="p-bold"><i class="bi bi-exclamation-triangle-fill icon-differential"></i>&nbsp&nbsp Consulta com Pedro Sampario em 7 dias.</span>
             </p>
-
-
-            
         </div>
     </div>
 </div>
