--- a/projects/Projeto_Django_Saude/templates/partials/navbar.html
+++ b/projects/Projeto_Django_Saude/templates/partials/navbar.html
@@ -3,7 +3,7 @@
 
     <div class="container-fluid">
 
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="{% url 'home' %}">
         <img src="{% static 'geral/img/logo.png' %}" width="20%" alt="">
         &nbspHEALING
       </a>
