more code in the project

--- a/projects/Projeto_Django_Biblioteca/templates/base.html
+++ b/projects/Projeto_Django_Biblioteca/templates/base.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <nav class="navbar navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Biblioteca</a>
+      <a class="navbar-brand" href="{% url 'home' %}">Biblioteca</a>
     </nav>
     
     {% block 'conteudo' %}
