More changes in the project

--- a/projects/Projeto_Django_Biblioteca/livro/templates/home.html
+++ b/projects/Projeto_Django_Biblioteca/livro/templates/home.html
@@ -5,6 +5,7 @@
 {% block 'conteudo' %}
 
 <div class="container">
+  <a href="{% url 'sair' %}" class="btn btn-danger">Sair</a>
     <div class="row">
 
         {% for livro in livros %}
