--- a/projects/Projeto_Django_Biblioteca/livro/templates/ver_livro.html
+++ b/projects/Projeto_Django_Biblioteca/livro/templates/ver_livro.html
@@ -1,21 +1,79 @@
 {% extends 'base.html' %}
 
 {% block 'conteudo' %}
-    <div class="container" style="text-align: center;">
-        <input class="form-control" value="{{ livro.nome }}">
-        <h1>{{ livro.autor }}</h1>
-        <h1>{{ livro.co_autor }}</h1>
-        <h1>{{ livro.data_cadastro }}</h1>
-        <h1 style="display: inline;"  class="card-subtitle mb-2 text-muted">Emprestado: </h1>
-        {% if livro.emprestado %}
-            <svg style="color: green; display: inline;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
-                <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425z"/>
-            </svg>
-        {% else %}
-            <svg style="color: red; display: inline;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
-                <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"/>
-            </svg>
-        {% endif %}
+    <div class="container" >
         <br>
+        <form action="#" method="POST">
+            {% csrf_token %}
+            <p>
+                <label for="">Nome do Livro: </label>
+                <input type="text" class="form-control" value="{{ livro.nome }}">
+            </p>
+
+            <p>
+                <label for="">Nome do Autor: </label>
+                <input  style="width: 40%;" type="text" class="form-control" value="{{ livro.autor }}">
+            </p>
+
+            <p>
+                <label for="">Nome do Co_Autor: </label>
+                <input  style="width: 40%;" type="text" class="form-control" value="{% if livro.co_autor %} {{ livro.co_autor }} {% endif %}">
+            </p>
+
+            <p>
+                <label for="">Data: </label>
+                <input  style="width: 20%;" type="text" class="form-control" value="{{ livro.data_cadastro }}">
+            </p>
+
+            <label for="">Categoria</label>
+            <select name="categoria" class="form-control" style="width: 40%;">
+                {% for categoria in  categoria_livro %}
+                {% if livro.categoria.nome == categoria.nome %}
+                    <option selected >{{ categoria }}</option>
+                {% else %}
+                    <option>{{ categoria }}</option>
+                {% endif %}
+                {% endfor %}
+            </select>
+            <br>
+            <br>
+            <label for="">Emprestado: &nbsp; &nbsp;</label>
+            {% if livro.emprestado %}
+                <input checked type="checkbox" name="emprestado" style="transform: scale(2.0);">
+            {% else %}
+                <input type="checkbox" name="emprestado" style="transform: scale(2.0);">      
+            {% endif %}
+            <br>
+            <br>
+            <input type="submit" class="btn btn-success btn-lg" value="Salvar">
+        </form>
+
+        <hr>
+        <h1>Histórico de Empréstimo </h1>
+
+        <table class="table table-striped">
+            <thead>
+              <tr>
+                <th scope="col">Nome</th>
+                <th scope="col">Data Empréstimo</th>
+                <th scope="col">Data Devolução</th>
+                <th scope="col">Tempo de Duração</th>
+              </tr>
+            </thead>
+            <tbody>
+            {% for emprestimo in emprestimos%}
+                <tr>
+                    {% if emprestimo.nome_emprestado_anonimo == None %}
+                        <th scope="row">{{ emprestimo.nome_emprestado }}</th>
+                    {% else %}
+                        <th scope="row">{{ emprestimo.nome_emprestado_anonimo }}</th>
+                    {% endif %}
+                    <td>{{ emprestimo.data_emprestimo }}</td>
+                    <td>{{ emprestimo.data_devolucao }}</td>
+                    <td>{{ emprestimo }}</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+          </table>
     </div>
 {% endblock %}
