--- a/projects/Projeto_Django_Biblioteca/livro/templates/ver_livro.html
+++ b/projects/Projeto_Django_Biblioteca/livro/templates/ver_livro.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load filtros %}
 
 {% block 'conteudo' %}
     <div class="container" >
@@ -70,7 +71,7 @@
                     {% endif %}
                     <td>{{ emprestimo.data_emprestimo }}</td>
                     <td>{{ emprestimo.data_devolucao }}</td>
-                    <td>{{ emprestimo }}</td>
+                    <td>{{ emprestimo.data_devolucao|mostra_duracao:emprestimo.data_emprestimo }} Dias </td>
                 </tr>
             {% endfor %}
             </tbody>
