--- a/projects/Projeto_Django_Biblioteca/templates/base.html
+++ b/projects/Projeto_Django_Biblioteca/templates/base.html
@@ -75,7 +75,33 @@
               </div>
 
               <div style="display: none;" id="emprestimo">
-                Empréstimos
+                <button onclick="exibe_input_emprestado(1)" class="btn-success">Usuário Novo</button>
+                <button onclick="exibe_input_emprestado(2)" class="btn-dark">Usuário Existente</button>
+                <br>  
+                <br>
+                <form action="{% url 'cadastrar_emprestimo' %}" method="POST" id="form_emprestimo">
+                  {% csrf_token %}
+
+                  <select class="form-control" name="nome_emprestado" id="nome_emprestado" style="display: none;">
+                    {% for usuario in usuarios %}
+                      <option value="{{ usuario.id }}">{{ usuario.nome}}</option>
+                    {% endfor %}
+                  </select>
+
+                  <br>
+                  <input  type="text" placeholder="Digite o Nome para quem emprestou..." name="nome_emprestado_anonimo" class="form-control" id="nome_emprestado_anonimo">
+                  <br>
+
+                  <select class="form-control" name="livro_emprestado">
+                    {% for livro in livros_emprestar %}
+                      <option value="{{ livro.id }}">{{ livro.nome}}</option>
+                    {% endfor %}
+                  </select>
+
+                  <br>
+                  <input type="submit" value="Emprestar" class="btn btn-success">
+
+                </form>
               </div>
 
           </div>
@@ -104,6 +130,19 @@
           categoria.style.display = 'none';
           livro.style.display = 'none';
           emprestimo.style.display = 'block';
+        }
+      }
+
+
+
+      function exibe_input_emprestado(v1){
+        if(v1 == 1){
+          document.getElementById('nome_emprestado').style.display = "none"
+          document.getElementById('nome_emprestado_anonimo').style.display = "block"
+        }
+        else{
+          document.getElementById('nome_emprestado').style.display = "block"
+          document.getElementById('nome_emprestado_anonimo').style.display = "none"
         }
       }
     </script>
