--- a/projects/Projeto_Django_Biblioteca/livro/templates/ver_livro.html
+++ b/projects/Projeto_Django_Biblioteca/livro/templates/ver_livro.html
@@ -22,45 +22,51 @@
 
     <div class="container" >
         <br>
-        <form action="#" method="POST">
+        <form action="{% url 'alterar_livro' %}" method="POST">
             {% csrf_token %}
+            <input type="hidden" name="livro_id" value="{{livro.id}}">
             <p>
                 <label for="">Nome do Livro: </label>
-                <input type="text" class="form-control" value="{{ livro.nome }}">
+                <input type="text" class="form-control" value="{{ livro.nome }}" name="nome_livro">
             </p>
 
             <p>
                 <label for="">Nome do Autor: </label>
-                <input  style="width: 40%;" type="text" class="form-control" value="{{ livro.autor }}">
+                <input  style="width: 40%;" type="text" class="form-control" value="{{ livro.autor }}" name="autor">
             </p>
 
             <p>
                 <label for="">Nome do Co_Autor: </label>
-                <input  style="width: 40%;" type="text" class="form-control" value="{% if livro.co_autor %} {{ livro.co_autor }} {% endif %}">
-            </p>
-
-            <p>
-                <label for="">Data: </label>
-                <input  style="width: 20%;" type="text" class="form-control" value="{{ livro.data_cadastro }}">
+                <input name="co_autor" style="width: 40%;" type="text" class="form-control" value="{% if livro.co_autor %} {{ livro.co_autor }} {% endif %}">
             </p>
 
             <label for="">Categoria</label>
-            <select name="categoria" class="form-control" style="width: 40%;">
+            <select name="categoria_id" class="form-control" style="width: 40%;">
                 {% for categoria in  categoria_livro %}
                 {% if livro.categoria.nome == categoria.nome %}
-                    <option selected >{{ categoria }}</option>
+                    <option value="{{categoria.id}}" selected >{{ categoria }}</option>
                 {% else %}
-                    <option>{{ categoria }}</option>
+                    <option value="{{categoria.id}}">{{ categoria }}</option>
                 {% endif %}
                 {% endfor %}
             </select>
             <br>
-            <br>
-            <label for="">Emprestado: &nbsp; &nbsp;</label>
+            
+            <p>
+                <label for="">Data: </label>
+                <p>{{ livro.data_cadastro }}</p>
+            </p>
+
+            
+            <label for="">Emprestado: </label>
             {% if livro.emprestado %}
-                <input checked type="checkbox" name="emprestado" style="transform: scale(2.0);">
+                <svg style="color: green;" xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
+                    <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425z"/>
+                </svg>
             {% else %}
-                <input type="checkbox" name="emprestado" style="transform: scale(2.0);">      
+                <svg style="color: red;" xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                    <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
+                </svg>
             {% endif %}
             <br>
             <br>
@@ -92,8 +98,12 @@
                         <th scope="row">{{ emprestimo.nome_emprestado_anonimo }}</th>
                     {% endif %}
                     <td>{{ emprestimo.data_emprestimo }}</td>
-                    <td>{{ emprestimo.data_devolucao }}</td>
-                    <td>{{ emprestimo.data_devolucao|mostra_duracao:emprestimo.data_emprestimo }} Dias </td>
+                    {% if emprestimo.data_devolucao %}
+                        <td>{{ emprestimo.data_devolucao }}</td>
+                    {% else %}
+                        <td> Sem Data de Devolução </td>
+                    {% endif %}
+                    <td>{{ emprestimo.data_devolucao|mostra_duracao:emprestimo.data_emprestimo }} </td>
                 </tr>
             {% endfor %}
             </tbody>
