--- a/projects/Projeto_Django_Biblioteca/templates/base.html
+++ b/projects/Projeto_Django_Biblioteca/templates/base.html
@@ -21,10 +21,19 @@
     <nav class="navbar navbar-dark bg-dark">
       <a class="navbar-brand" href="{% url 'home' %}">Biblioteca</a>
       {% if usuario_logado %}
-      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-        Cadastrar
-      </button>
-        <a href="{% url 'sair' %}" class="btn btn-danger">Sair</a>
+        <div class="dropdown show">
+          <a class="btn btn-primary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Menu
+          </a>
+        
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
+            <button type="button" class="btn btn-primary dropdown-item" data-toggle="modal" data-target="#exampleModal">Opções</button>
+            <a href="{% url 'seus_emprestimos' %}" class="btn btn-danger dropdown-item">Empréstimos</a>
+            <a href="{% url 'sair' %}" class="btn btn-danger dropdown-item">Sair</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item">Total de Livros: {{ total_livros }}</a>
+          </div>
+        </div>
       {% endif %}
     </nav>
     
@@ -40,7 +49,7 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Cadastrar</h5>
+            <h5 class="modal-title" id="exampleModalLabel">Cadastrar/Emprestar/Devolver</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
@@ -49,6 +58,7 @@
             <button style="margin-left: 10px;" onclick="mostrar_form(1)" class="btn btn-info">Categoria</button>
             <button style="margin-left: 10px;" onclick="mostrar_form(2)" class="btn btn-warning">Livro</button>
             <button style="margin-left: 10px;" onclick="mostrar_form(3)" class="btn btn-primary">Empréstimo</button>
+            <button style="margin-left: 10px;" onclick="mostrar_form(4)" class="btn btn-danger">Devolução</button>
             <br>
             <br>
             <hr>
@@ -103,7 +113,19 @@
 
                 </form>
               </div>
+              <div id="devolucao" style="display: none;">
+                <form action="{% url 'devolver_livro' %}" method="POST">
+                {% csrf_token %}
+                    <select class="form-control" name="id_livro_devolver">
+                      {% for livro in livros_emprestados %}
+                          <option value="{{livro.id}}">{{ livro.nome }}</option>
+                      {% endfor %}
 
+                    </select>
+                    <br>
+                    <input type="submit" class="btn btn-warning" value="Devolver">
+                </form>
+              </div>
           </div>
         </div>
       </div>
@@ -115,21 +137,31 @@
         categoria = document.getElementById('categoria')
         livro = document.getElementById('livro')
         emprestimo = document.getElementById('emprestimo')
+        devolucao = document.getElementById('devolucao')
 
         if(v1 == 1){
           livro.style.display = 'none';
           emprestimo.style.display = 'none';
           categoria.style.display = 'block';
+          devolucao.style.display = 'none';
         }
         else if(v1 == 2){
           categoria.style.display = 'none';
           emprestimo.style.display = 'none';
           livro.style.display = 'block';
+          devolucao.style.display = 'none';
         }
         else if(v1 == 3){
           categoria.style.display = 'none';
           livro.style.display = 'none';
           emprestimo.style.display = 'block';
+          devolucao.style.display = 'none';
+        }
+        else if (v1 == 4){
+          categoria.style.display = 'none';
+          livro.style.display = 'none';
+          emprestimo.style.display = 'none';
+          devolucao.style.display = 'block';
         }
       }
 
