--- a/projects/Projeto_Django_Mecanica/clientes/templates/clientes.html
+++ b/projects/Projeto_Django_Mecanica/clientes/templates/clientes.html
@@ -10,11 +10,11 @@
     <div class="container">
         <div class="row">
 
-            <div class="col-md card-dashboard">
+            <div onclick="exibir_form(1)" class="col-md card-dashboard">
                 <p class="text-card">Adicionar clientes</p>
             </div>
 
-            <div class="col-md card-dashboard">
+            <div onclick="exibir_form(2)" class="col-md card-dashboard">
                 <p class="text-card">Atualizar Clientes</p>
             </div>
 
@@ -79,6 +79,46 @@
                 <input type="submit" value="Cadastrar" class="btn-principal">
             </form>
     
+        </div>
+
+        <div id="att_cliente">
+            <p></p>
+            <select onchange="dados_cliente()" id="cliente-select" class="form-control">
+                {% for cliente in clientes %}
+                <option value="{{cliente.id}}">
+                    {{cliente.nome}}
+                </option>
+                {% endfor %}    
+            </select>
+
+            <br>
+            <hr>
+
+            <div id="form-att-cliente">
+                <p>Nome:</p>
+                <input id="nome" type="text" class='form-control'>
+                <br>
+
+                <p>Sobrenome:</p>
+                <input id="sobrenome" type="text" class='form-control'>
+                <br>
+
+                <p>Email:</p>
+                <input id="email" type="email" class='form-control'>
+                <br>
+                
+                <p>CPF:</p>
+                <input id="cpf" type="text" class='form-control'>
+
+                <hr>
+
+                <h3>Carros</h3>
+
+                <div id="carros">
+                    
+                </div>
+            </div>
+
         </div>
 
     </div>
